# ETHGlobal-Cannes

./: .gitignore  README.md
backend/: .env.template  .gitignore  README.md  propose.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  abis.py  api.py  config.py  crew.py  main.py  models.py  utils.py
backend/src/ai/: custom_tools.py  utils.py
backend/src/ai/crews/: capitalist_crew.py
backend/src/services/: governance.py  strategy.py  treasury.py
backend/src/tools/: __init__.py  execute_proposal_tool.py  proposal_tool.py
contracts/: .gitignore  foundry.toml  package.json  remappings.txt
contracts/scripts/: BaseScript.s.sol  CreateStrategyProposal.s.sol  DeployERC4337.s.sol  DeployGovernanceSystem.s.sol  DeployStrategy.s.sol  DeployTreasury.s.sol  ExecuteProposal.s.sol  FetchDAOState.s.sol  MintAndDelegate.s.sol  MintETHTokens.s.sol  PaymasterDeposit.s.sol  VoteOnProposal.s.sol
contracts/scripts/deployments/: deploymentConfig.json  develop-contract-abis.json  develop-contract-addresses.json
contracts/src/: DAOToken.sol  ETHToken.sol  Governance.sol  SimplePaymaster.sol  Strategy.sol  Treasury.sol
contracts/test/: GovernanceTest.t.sol
front-end/: .gitignore  package.json  tsconfig.app.json
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.scss  main.tsx
frontend/src/components/: AgentProvider.tsx  Header.tsx
frontend/src/constants/: chains.ts  wagmi.ts
frontend/src/contexts/: agent-context.ts
frontend/src/providers/: app-providers.tsx
frontend/src/router/: router.tsx
(+48 files in other folders)
