[project]
name = "web3-ai-agents-backend"
version = "0.1.0"
description = "Web3 AI Agents Backend using CrewAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.126.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "crewai-tools>=0.40.0",
    "web3>=7.12.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]